--- a/recipes/yorkshirepudding.html
+++ b/recipes/yorkshirepudding.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Yorkshire Pudding Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/yorkshirepudding.html">Yorkshire Pudding</a></li>
-    </ul>
+    <h1>Yorkshire Pudding</h1>
 </body>
 </html>
