Finish yorkshirepudding.html

--- a/recipes/yorkshirepudding.html
+++ b/recipes/yorkshirepudding.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>Yorkshire Pudding</h1>
+    <img src="../images/pudding.jpg" alt="fluffy, golden brown yorkshire pudding in a muffin tin">
+    <h2>Description</h2>
+    <p>Yorkshire pudding is a delicious and versatile English pastry that can be eaten at any meal with sweet or savory food. Here's how to make it:</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 eggs</li>
+        <li>3/4 cup of milk</li>
+        <li>3/4 cup of flour</li>
+        <li>3/4 teaspoon of kosher salt</li>
+        <li>1/4 cup of butter or lard</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 400 degrees.</li>
+        <li>In a medium bowl, whisk together eggs, milk, flour and salt. Do not overmix. Allow batter to rest at room teperature for 30 minutes</li>
+        <li>Add a teaspoon of fat to each cup of a 12-cup muffin tin and transfer to the oven to heat, about 5-7 minutes.</li>
+        <li>Once hot, divide batter equally to fill the cups about halfway, and bake for 10-12 minutes or until golden brown and crisp.</li>
+    </ol>
 </body>
 </html>
