Edit index.html and pecanpie.html. Finish eggnog.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/yorkshirepudding.html">Yorkshire Pudding</a></li>
+        <li><a href="recipes/pecanpie.html">Pecan Pie</a></li>
+        <li><a href="recipes/eggnog.html">Eggnog</a></li>
     </ul>
 </body>
 </html>
