--- a/recipes/pecanpie.html
+++ b/recipes/pecanpie.html
@@ -10,7 +10,7 @@
     <h1>Pecan Pie</h1>
     <img src="../images/pecanpie.jpeg" alt="a pecan pie with a slice removed">
     <h2>Description</h2>
-    <p>Pecan trees are plentiful here in north Texas and pecan is a perennial holiday favorite. Here's how to make it:</p>
+    <p>Pecan trees are plentiful here in north Texas so pecan pie is a perennial holiday favorite. Here's how to make it:</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 teaspoon vanilla extract</li>
