Upload all files and add CSS styling

--- a/recipes/pecanpie.html
+++ b/recipes/pecanpie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Pecan Pie Recipe</title>
 </head>
 <body>
@@ -11,6 +12,7 @@
     <img src="../images/pecanpie.jpeg" alt="a pecan pie with a slice removed">
     <h2>Description</h2>
     <p>Pecan trees are plentiful here in north Texas so pecan pie is a perennial holiday favorite. Here's how to make it:</p>
+    <div class="details">
     <h2>Ingredients</h2>
     <ul>
         <li>1 teaspoon vanilla extract</li>
@@ -24,6 +26,7 @@
         <li>1 tablespoon of cold water</li>
         <li>2 teaspoons of cornstarch</li>
     </ul>
+    <hr>
     <h2>Steps</h2>
     <ol>
         <li>Preheat oven to 350 degrees.</li>
@@ -33,5 +36,6 @@
         <li>Stir in salt, vanilla and pecans.</li>
         <li>Pour into pie shell and bake until filling is set, 45-50 minutes</li>
     </ol>
+    </div>
 </body>
 </html>
