--- a/recipes/yorkshirepudding.html
+++ b/recipes/yorkshirepudding.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Yorkshire Pudding Recipe</title>
 </head>
 <body>
@@ -11,6 +12,7 @@
     <img src="../images/pudding.jpg" alt="fluffy, golden brown yorkshire pudding in a muffin tin">
     <h2>Description</h2>
     <p>Yorkshire pudding is a delicious and versatile English pastry that can be eaten at any meal with sweet or savory food. Here's how to make it:</p>
+    <div class="details">
     <h2>Ingredients</h2>
     <ul>
         <li>3 eggs</li>
@@ -19,6 +21,7 @@
         <li>3/4 teaspoon of kosher salt</li>
         <li>1/4 cup of butter or lard</li>
     </ul>
+    <hr>
     <h2>Steps</h2>
     <ol>
         <li>Preheat oven to 400 degrees.</li>
@@ -26,5 +29,6 @@
         <li>Add a teaspoon of fat to each cup of a 12-cup muffin tin and transfer to the oven to heat, about 5-7 minutes.</li>
         <li>Once hot, divide batter equally to fill the cups about halfway, and bake for 10-12 minutes or until golden brown and crisp.</li>
     </ol>
+    </div>
 </body>
 </html>
