--- a/recipes/eggnog.html
+++ b/recipes/eggnog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Alton Brown's Eggnog Recipe</title>
 </head>
 <body>
@@ -11,6 +12,7 @@
     <img src="../images/eggnog.jpeg" alt="two glasses of thick eggnog">
     <h2>Description</h2>
     <p>Store bought eggnog can't compare! If you've been avoiding eggnog based on past experiences, give this holiday treat one more try! Here's how to make it:</p>
+    <div class="details">
     <h2>Ingredients</h2>
     <ul>
         <li>1 pint of whole milk</li>
@@ -20,11 +22,13 @@
         <li>1/3 cup of white sugar, plus 1 tablespoon</li>
         <li>1 teaspoon of freshly grated nutmeg</li>
     </ul>
+    <hr>
     <h2>Steps</h2>
     <ol>
         <li>In the bowl of a stand mixer, beat the egg yolks until they lighten in color. Gradually add the 1/3 cup sugar and continue to beat until it is completely dissolved. Add the milk, cream, bourbon and nutmeg and stir to combine.</li>
         <li>Place the egg whites in the bowl of a stand mixer and beat to soft peaks. With the mixer still running gradually add the 1 tablespoon of sugar and beat until stiff peaks form.</li>
         <li>Whisk the egg whites into the mixture. Chill and serve.</li>
     </ol>
+    </div>
 </body>
 </html>
